### #42 레시피 자세히 보기 기능 See: Github issue #42 --------------------------------------- ### 작업파일 * MainView.jsx * SearchResult.jsx * ViewRecipe.jsx/scss ------------------ ### 작업내용 * 칵테일 자세히 보기 시 좌/우 이동 되도록 수정(우 이동 시 더 이동 가능할 때 list에 없으면 서버 통신 로직 필요) * 자세히 보기 닫기, 오른쪽 이동 버튼 z-index 문제 수정

--- a/src/containers/ViewRecipe/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/ViewRecipe.scss
@@ -84,6 +84,7 @@
     transform: translate(-50%, -50%);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
     background-color: #080f24;
+    z-index: 1;
 
     .detail-content-arrow {
       display: block;
